# OpenVibeCoding

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  PRIVACY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  server.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/orchestrator/: .env.example  AGENTS.md  ARCH.md  CLAUDE.md  README.md  pytest.ini  requirements.txt  setup.cfg
apps/orchestrator/db/migrations/: README.md
apps/orchestrator/src/cortexpilot_orch/: cli.py  cli_command_helpers.py  cli_coverage_helpers.py  cli_runtime_helpers.py  config.py  mcp_queue_pilot_server.py  mcp_readonly_server.py
apps/orchestrator/src/cortexpilot_orch/api/: artifact_helpers.py  deps.py  (+14 more)
apps/orchestrator/src/openvibecoding_orch/: cli.py  cli_command_helpers.py  cli_coverage_helpers.py  cli_runtime_helpers.py  config.py  mcp_entrypoints.py  mcp_queue_pilot_server.py  mcp_readonly_server.py
apps/orchestrator/tests/: conftest.py  test_agents_and_codex_runner_detailed.py  test_agents_and_codex_runner_detailed_tail.py  test_agents_contract_flow_helpers.py  test_agents_handoff_chain.py  test_agents_handoff_runtime_single_flow.py  test_agents_mcp_execution_helpers_branches.py  test_agents_prompting_branch_matrix_extra.py  test_agents_prompting_parity.py  test_agents_runner_behavior_parity.py  test_agents_runner_execution_helpers.py  test_agents_runner_failure_matrix_extra.py  test_agents_runner_failure_matrix_extra_tail.py  test_agents_runner_helpers_extra.py  test_agents_runner_helpers_extra_tail.py  test_agents_runner_phase2_helpers_branches.py  test_agents_runner_stream_and_handoff_branches.py  test_agents_runtime_helpers_extra.py  test_api_main.py  test_api_main_branch_matrix_extra.py  test_api_main_coverage_extra.py  test_api_main_pm_sessions.py  test_api_main_runtime_views.py  test_api_operator_copilot_route.py  test_api_role_config.py  test_app_server_runner_branches.py  test_bench_e2e_speed_gate.py  test_browser_policy_resolver.py  test_browser_runner.py  test_browser_session_manager.py  test_build_governance_closeout_report.py  test_chain_context_policy.py  test_chain_helpers.py  test_chain_helpers_extra.py  test_chain_lifecycle_integration_non_e2e.py  test_chain_runner.py  test_chain_runner_dependency_artifacts.py  test_chain_runner_edge_cases.py  test_chain_runner_extended.py  test_chain_runner_fanin_summary.py  (+181 more)
apps/orchestrator/tests/counterfactual/: test_api_main_artifact_helpers_counterfactual.py  test_api_main_event_cursor_counterfactual.py  test_api_main_run_state_counterfactual.py  test_api_main_search_payload_counterfactual.py  test_api_pm_counterfactual.py  test_api_routes_runs_counterfactual.py
apps/orchestrator/tests/e2e/: e2e_helpers.py  test_chain_lifecycle_e2e.py  test_dashboard_e2e.py  test_doctor_e2e.py  test_god_mode_e2e.py  test_governance_e2e.py  test_mcp_concurrency_e2e.py  test_mcp_protocol_drift_e2e.py  test_real_run_then_replay.py  test_reexec_report.py  test_replay_bundle.py  test_replay_verify_strict.py  test_sampling_e2e.py
apps/orchestrator/tests/helpers/: __init__.py  api_main_test_io.py  mcp_proxy.py  mcp_stdio.py
apps/orchestrator/tests/self_heal/: test_cov_apps_orchestrator_src_cortexpilot_orch_api_routes_admin.py  test_cov_apps_orchestrator_src_cortexpilot_orch_api_routes_pm.py  test_cov_apps_orchestrator_src_cortexpilot_orch_api_routes_runs.py  test_cov_apps_orchestrator_src_cortexpilot_orch_scheduler_report_builders.py
(+1237 files in other folders)
