[metadata]
name = openvibecoding-orchestrator
version = 0.1.0a4
description = OpenVibeCoding orchestrator and read-only MCP runtime
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/xiaojiou176-open/OpenVibeCoding
project_urls =
    Homepage = https://xiaojiou176-open.github.io/OpenVibeCoding/
    Repository = https://github.com/xiaojiou176-open/OpenVibeCoding
    Documentation = https://xiaojiou176-open.github.io/OpenVibeCoding/mcp/
    Issues = https://github.com/xiaojiou176-open/OpenVibeCoding/issues
    Discussions = https://github.com/xiaojiou176-open/OpenVibeCoding/discussions
    Changelog = https://github.com/xiaojiou176-open/OpenVibeCoding/releases

[options]
package_dir =
    = src
packages = find:
install_requires =
    pydantic==2.12.5
    jsonschema==4.26.0
    typer==0.21.1
    rich==15.0.0
    fastapi==0.128.1
    uvicorn==0.44.0
    python-dotenv==1.2.1
    opentelemetry-api==1.41.0
    opentelemetry-sdk==1.41.0
    opentelemetry-exporter-otlp-proto-grpc==1.41.0
    opentelemetry-exporter-otlp-proto-http==1.41.0
    playwright==1.58.0
    google-genai==1.72.0
    openai-agents==0.13.6
    temporalio==1.22.0
    duckduckgo-search==8.1.1
    httpx==0.28.1
    mcp>=1.9.4,<2.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    openvibecoding = openvibecoding_orch.cli:main
    openvibecoding-readonly-mcp = openvibecoding_orch.mcp_entrypoints:readonly_mcp_main
