[package]
name = "cortexpilot-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-window-state = "2.4.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
